# GPyEDS

./: .flake8  .gitignore  .readthedocs.yml  MCMC_emcee.py  README.md  conftest.py  mkdocs.yml  pyproject.toml  testScript.py
.github/workflows/: python-app.yml
GPyEDS/: GPAM.py  mean_centre_normalisation.py  nn.py  spatial_filters.py  utils.py
GPyEDS/EDS2CHEM/: mcmc.py
docs/: install.md
docs/Examples/: QEMSCAN_build_data.ipynb  QEMSCAN_build_data.py
docs/TWExampleRuns/: segmentation.py
tests/: filter_test.py  nn_AE_test.py
